fixed spacing on top of image

--- a/my-cookbook.css
+++ b/my-cookbook.css
@@ -53,6 +53,7 @@ svg.rotate180 {
     right: 0;
     top: 56px;
     width: 3em;
+    height: 0;
 }
 
 #steps {
